--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11.9.3",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.9.3",
+    "@fontsource/montserrat": "^4.5.11",
     "@fontsource/roboto": "4.5.7",
     "@mui/icons-material": "5.8.3",
     "@mui/material": "5.8.3",
