--- a/nextjs-mui.yaml
+++ b/nextjs-mui.yaml
@@ -18,6 +18,6 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     lighthouse.com/website-url: https://backstage.io
 spec:
-  type: website
-  owner: Matheus Kafuri
+  type: library
+  owner: CNCF
   lifecycle: experimental
